# ds-daiki

./: .gitignore  pyproject.toml
docs/: data.md
docs/study/: feature_selection.md  imblanced-data-set.md  my-idea.md  sampling.md
src/: my_lightgbm.py  preprocessing.py
